--- a/inscription.html
+++ b/inscription.html
@@ -1,18 +1,88 @@
-<doctype html>
-    <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv='X-UA-Cmpatible' conter>
-        <title>BCTN</title>
-        <meta name='viewport' content='width=device-width' , initial-scale='1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    </head>
+<!DOCTYPE html>
+<html lang="fr">
 
-    <body>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>inscription</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' type='text/css' media='screen' href='inscription.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js' defer></script>
+</head>
+<header>
+    <img class="logo" src="logo.png" alt="logo" title="logo BCTN">
+    <nav>
+        <div class="left-links">
+            <a href="accueil.html">ACCUEIL</a>
+            <a href="agenda.html">AGENDA</a>
+            <a href="galerie.html">GALERIE</a>
+        </div>
+        <div class="right-links">
+            <a href="contact.html">CONTACT</a>
+            <a href="inscription.html" class="inscrire">S'INSCRIRE</a>
+        </div>
+    </nav>
+</header>
 
-
-
+<body>
+    <div id="inscription">
+        <div id="couverture">
+        </div>
+        <div id="inscform">
+            <form action="" method="post" id="formulaire">
+                <h1>S'inscrire au Badminton Club Theix-Noyalo</h1>
+                <div class="name">
+                    <div class="n1"><label for="firstname">Prénom&nbsp;:</label><br>
+                        <input type="text" id="firstname" name="user_name" placeholder="Prénom" />
+                    </div>
+                    <div class="n2"><label for="name">Nom&nbsp;:</label><br>
+                        <input type="text" id="name" name="user_name" placeholder="Nom" />
+                    </div>
+                </div><br>
+                <div class="mail">
+                    <label for="mail">E-mail&nbsp;:</label><br>
+                    <input type="email" id="mail" name="user_email" placeholder="Adresse E-mail" />
+                </div><br>
+                <div class="msg">
+                    <label for="msg">Message&nbsp;:</label><br>
+                    <textarea id="msg" name="user_message" placeholder="Ajouter un message"></textarea>
+                </div><br>
+                <input type="checkbox" id="horns" name="horns" />
+                <label for="horns">J'accepte que mes informations soient utilisées par le BCTN</label><br><br>
+                <button id="send">S'inscrire</button>
+            </form>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="lien.footer">
+            <b href="#">À propos du BCTN</b>
+            <b href="#">Conditions générales</b>
+            <b href="#">Politiques de confidentialité</b>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+    <script>
+        const lenis = new Lenis({
+            duration: 1.2,
+            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)), // https://www.desmos.com/calculator/brs54l4xou
+            direction: 'vertical', // vertical, horizontal
+            gestureDirection: 'vertical', // vertical, horizontal, both
+            smooth: true,
+            mouseMultiplier: 1,
+            smoothTouch: false,
+            touchMultiplier: 2,
+            infinite: false,
+        })
+        //get scroll value
+        lenis.on('scroll', ({ scroll, limit, velocity, direction, progress }) => {
+            console.log({ scroll, limit, velocity, direction, progress })
+        })
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
+        }
+        requestAnimationFrame(raf)
+    </script>
     </body>
-    </html> 
-
-    
+</html>
