--- a/agenda.html
+++ b/agenda.html
@@ -1,9 +1,8 @@
-<doctype html>
+<!DOCTYPE html>
     <html lang="fr">
-
     <head>
         <meta charset="utf-8">
-        <meta http-equiv='X-UA-Cmpatible' conter>
+        <meta http-equiv='X-UA-Compatible' content="IE=edge">
         <title>agenda</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel='stylesheet' type='text/css' media='screen' href='agenda.css'>
