--- a/agenda.html
+++ b/agenda.html
@@ -43,7 +43,7 @@
                             <button id="next"></button>
                         </div>
                     </div>
-                    <section>
+                    <div>
                         <ul class="days">
                             <li>Sun</li>
                             <li>Mon</li>
@@ -54,7 +54,7 @@
                             <li>Sat</li>
                         </ul>
                         <ul class="dates"></ul>
-                    </section>
+                    </div>
                 </div>
             </div>
             <div class="ag2">
