--- a/inscription.html
+++ b/inscription.html
@@ -11,7 +11,7 @@
     <script src='main.js' defer></script>
 </head>
 <header>
-    <img class="logo" src="logo.png" alt="logo" title="logo BCTN">
+    <a href="./accueil.html"><img class="logo" src="logo.png" alt="logo" title="logo BCTN"></a>
     <nav>
         <div class="left-links">
             <a href="accueil.html">ACCUEIL</a>
@@ -56,9 +56,9 @@
     </div>
     <footer class="footer">
         <div class="lien.footer">
-            <b href="#">À propos du BCTN</b>
-            <b href="#">Conditions générales</b>
-            <b href="#">Politiques de confidentialité</b>
+            <a href="#">À propos du BCTN</a>
+            <a href="#">Conditions générales</a>
+            <a href="#">Politiques de confidentialité</a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
